--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -19,6 +19,7 @@
 
 .product-image img {
   border-radius: 8px;
+  max-width: 30vw;
 }
 
 .product-content {
@@ -41,6 +42,10 @@
 @media screen and (max-width: 767px) {
   .product-content h2 {
     font-size: 3rem;
+  }
+
+  .product-image img {
+    max-width: 50vw;
   }
 }
 
