--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -1,25 +1,16 @@
 .product {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-content: center;
   border: 2px solid #000;
-  /* border-bottom: 2px solid #000; */
-}
-
-.product-image.image-right {
-  order: 1;
-  border-left: 2px solid #000;
-}
-
-.product-image.image-left {
-  order: -1;
-  border-right: 2px solid #000;
 }
 
 .product-image img {
-  border-radius: 8px;
-  max-width: 30vw;
+  max-width: 15vw;
+  display: block;
+}
+
+.product-image {
+  border-right: 2px solid #000;
 }
 
 .product-content {
@@ -36,21 +27,33 @@
 }
 
 .product-content h2 {
-  font-size: 5rem;
+  font-size: 2.5rem;
 }
 
 @media screen and (max-width: 767px) {
   .product-content h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   .product-image img {
     max-width: 50vw;
   }
+
+  .product-image.image-right {
+    border-left: 2px solid #000;
+
+    order: 1;
+  }
+
+  .product-image.image-left {
+    border-right: 2px solid #000;
+
+    order: -1;
+  }
 }
 
 @media screen and (max-width: 526px) {
   .product-content h2 {
-    font-size: 2rem;
+    font-size: 1.75rem;
   }
 }
