Added enquiry link for whatsapp

--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -23,6 +23,10 @@
 
 .product-content.image-left {
   background-color: #306beb;
+}
+
+.product-content.image-left,
+.product-content.image-left a {
   color: #fff;
 }
 
