--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -34,6 +34,19 @@
   font-size: 2.5rem;
 }
 
+.product-content a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  border-bottom: 3px solid;
+}
+
+.product-content.product-content.image-left svg {
+  fill: #fff;
+}
+.product-content.product-content svg {
+  margin-bottom: -4px;
+}
+
 @media screen and (max-width: 767px) {
   .product-content h2 {
     font-size: 2.5rem;
