--- a/src/components/BannerMarquee.css
+++ b/src/components/BannerMarquee.css
@@ -1,5 +1,5 @@
 .marquee-container {
-  background-color: #faf8f2;
+  background-color: #121212;
   font-family: sans-serif;
   font-size: 0.75rem;
 }
@@ -31,6 +31,7 @@
   padding-left: 100%;
   white-space: nowrap;
   animation: scroll-left 70s linear infinite;
+  color: #fff;
 }
 
 .marquee-content span {
@@ -38,6 +39,11 @@
   gap: 0.5rem;
   margin-right: 5rem;
 }
+
+.marquee-content span svg{
+  fill: #fff;
+}
+
 
 .marquee-content:hover {
   animation-play-state: paused;
