--- a/src/components/ProductsSection.css
+++ b/src/components/ProductsSection.css
@@ -2,16 +2,17 @@
   margin-top: -0.3rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 0 3rem 3rem;
-  gap: 1.5rem;
-  /* border-top: 2px solid #1f1f1f; */
+  padding: 0 2rem 3rem;
+  gap: 1rem;
+  position: relative;
+  z-index: 12;
 }
 
 @media screen and (max-width: 767px) {
   .ProductsSection {
     margin-top: -1.5rem;
     display: block;
-    padding: 0;
+    padding: 0 0 1rem;
   }
 }
 
