--- a/public/styles.css
+++ b/public/styles.css
@@ -343,6 +343,7 @@ button {
 }
 
 .add-to-cart-btn.enabled {
+  font-weight: 600;
   background: #306beb;
   cursor: pointer;
 }
@@ -546,6 +547,7 @@ button {
 }
 
 .checkout-btn {
+  font-weight: 600;
   background: #000;
   color: #fff;
   cursor: pointer;
