--- a/public/styles.css
+++ b/public/styles.css
@@ -35,8 +35,16 @@ input[type="number"] {
   text-align: center;
 }
 
+.ml-2 {
+  margin-left: calc(var(--spacing) * 2);
+}
+
 .mr-2 {
   margin-right: calc(var(--spacing) * 2);
+}
+
+.mb-2 {
+  margin-bottom: calc(var(--spacing) * 2);
 }
 
 .py-12 {
@@ -73,6 +81,14 @@ input[type="number"] {
 
 .font-size-md {
   font-size: 1rem;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.mobile-only {
+  display: none;
 }
 
 .top-navbar {
@@ -114,12 +130,6 @@ input[type="number"] {
   gap: 1rem;
 }
 
-#cartBtn {
-  background-color: #306beb;
-  color: #fff;
-  padding: 0.5rem 2rem;
-}
-
 .main {
   padding: 1rem;
   max-width: 650px;
@@ -155,6 +165,7 @@ h2 {
 button {
   border: none;
   color: #000;
+  background-color: transparent;
 }
 
 .btn.p-md {
@@ -466,6 +477,9 @@ button {
 }
 
 .cart-category-title {
+  background-color: #f0f0f0;
+  position: sticky;
+  top: 0;
   font-size: 18px;
   font-weight: 600;
   border-bottom: 2px solid #e0e0e0;
@@ -560,8 +574,17 @@ button {
 }
 
 @media (max-width: 768px) {
+  .btn.p-md {
+    padding: 0.5rem 0.25rem;
+  }
+  .font-size-md {
+    font-size: 14px;
+  }
+  .mobile-only {
+    display: block;
+  }
   .tabs {
-    margin: 1rem 2rem 1rem;
+    margin: 1rem 0 1rem;
   }
 
   .product-table .table-header:first-child,
