--- a/public/products/styles.css
+++ b/public/products/styles.css
@@ -933,8 +933,25 @@ button {
 }
 
 @media (max-width: 768px) {
+  .navbar-logo a {
+    font-size: 1.5rem;
+  }
+
   .btn.p-md {
     padding: 0.5rem 0.25rem;
+  }
+
+  .w-12 {
+    width: calc(var(--spacing) * 8);
+  }
+
+  .navbar-container {
+    padding: 0.5rem 1.25rem;
+  }
+
+  .product-list.container {
+    padding: 1rem 1.5rem 6rem;
+    gap: 0.5rem;
   }
   .font-size-md {
     font-size: 14px;
@@ -948,7 +965,7 @@ button {
 
   .table-row {
     display: grid;
-    grid-template-columns: 2fr 1fr auto;
+    grid-template-columns: 2fr 1fr 1fr;
   }
 
   .unit-toggle {
@@ -966,8 +983,12 @@ button {
   }
 
   .cart-item {
-    gap: 0.5rem;
+    gap: 0;
     font-size: 14px;
+  }
+
+  .cart-item-controls {
+    gap: 4px;
   }
 }
 
